--- a/TP1/app/src/main/res/values/strings.xml
+++ b/TP1/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="respQ2non">Non</string>
     <string name="respQ4oui">Oui</string>
     <string name="respQ4non">Non</string>
+    <string name="about">About</string>
+    <string name="newgame">Redémarrer</string>
+    <string name="contact">Contact</string>
+    <string name="version">Version</string>
 
 </resources>
